--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "quill": "^1.3.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.8",
@@ -42,6 +42,7 @@
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.0.0",
     "@types/lodash": "^4.14.195",
+    "fs-extra": "^11.1.1",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
