--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "build-app": "node --max_old_space_size=4096 ./node_modules/.bin/ng build --build-optimizer",
+    "build-app": "ng build --source-map=false",
     "start": "ng serve",
     "build": "node ./scripts/build.js",
     "watch": "ng build --watch --configuration development",
