--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@ngrx/store": "^15.4.0",
     "@ngrx/store-devtools": "^15.4.0",
     "file-saver": "^2.0.5",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^15.4.1",
@@ -42,7 +42,7 @@
     "@ngrx/store-devtools": "^15.4.0",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.0.0",
-    "@types/lodash": "^4.14.195",
+    "@types/lodash-es": "^4.17.12",
     "fs-extra": "^11.1.1",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
